# aicodeswitch

./: .env.example  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  TECH.md  UPGRADE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/workflows/: build-electron.yaml  build-tauri.yaml  publish-to-npm.yaml
docs/PRD/: agent-map.md  lan-config-sync.md  multi-user-edition.md  route-activation-refactor.md  service-performance-tpm.md  session-migration.md  session-route-binding.md  supervisor-agent.md
docs/REFER/: codex-sdk.md
docs/TECH/: ato-orchestrator-and-leader.md  tauri-architecture.md
electron/: loading.html  main.js  preload.js
public/: migration.md
schema/: claude.schema.md  deepseek-chat.schema.md  gemini.schema.md  openai-chat-completions.schema.md  openai.schema.md  stream.md
schemes/: claude.schema.md
scripts/: copy-server-assets.js  dev.js  electron-dev.js  electron-icon.js
server/: auth.ts  database.ts  main.ts  proxy-server.ts  version-check.ts
server/transformers/: chunk-collector.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/server/: AGENTS.md  auth.ts  coding-plan-headers.ts  coding-plan.ts  config-managed-fields.ts  config-merge.ts  config-metadata.ts  config.ts  database-factory.ts  database.ts  fs-database.ts  main.ts  mcp-image-handler.ts  migrate-to-fs.ts  (+13 more)
tauri/: AGENTS.md  Cargo.toml  move-bundle.js  prepare-resources.js  tauri.conf.json
types/: index.ts
ui/: App.tsx
(+135 files in other folders)
